added word guess link to word guess picture

--- a/portfolio.html
+++ b/portfolio.html
@@ -25,9 +25,10 @@
       <h1>Portfolio</h1>
 
       <div class="work">
-        <img src="http://lorempixel.com/400/200/" alt="Word Guess">
+        <img src="http://lorempixel.com/400/200/" href="https://skip1113.github.io/Word-Guess-Game/index.html" alt="Word Guess">
+        <a href="https://skip1113.github.io/Word-Guess-Game/index.html"></a>
 
-        <h3>Word Guess</h3>
+        <a href="https://skip1113.github.io/Word-Guess-Game/index.html"><h3>Word Guess</h3></a>
       </div>
       <div class="work">
         <img src="http://lorempixel.com/400/200/" alt="RPG Game">
