Saved images and Added link to Crystal Game

--- a/portfolio.html
+++ b/portfolio.html
@@ -25,28 +25,28 @@
       <h1>Portfolio</h1>
 
       <div class="work">
-        <img src="http://lorempixel.com/400/200/" href="https://skip1113.github.io/Word-Guess-Game/index.html" alt="Word Guess">
-        <a href="https://skip1113.github.io/Word-Guess-Game/index.html"></a>
+        <img src="assets/images/technics-0.jfif"  alt="Word Guess">
+        
 
         <a href="https://skip1113.github.io/Word-Guess-Game/index.html"><h3>Word Guess</h3></a>
       </div>
       <div class="work">
-        <img src="http://lorempixel.com/400/200/" alt="RPG Game">
+        <img src="assets/images/technics-1.jfif" alt="RPG Game">
 
-        <h3>RPG Game</h3>
+        <a href="https://skip1113.github.io/unit-4-game/"><h3>RPG Game</h3></a>
       </div>
       <div class="work">
-        <img src="http://lorempixel.com/400/200/" alt="Trivia Game">
+        <img src="assets/images/technics-2.jfif" alt="Trivia Game">
 
         <h3>Trivia Game</h3>
       </div>
       <div class="work">
-        <img src="http://lorempixel.com/400/200/" alt="Rutgers Info Widget">
+        <img src="assets/images/technics-3.jfif" alt="Rutgers Info Widget">
 
         <h3>Rutgers Info Widget</h3>
       </div>
       <div class="work">
-        <img src="http://lorempixel.com/400/200/" alt="Rock Paper Scissors">
+        <img src="assets/images/technics-4.jfif" alt="Rock Paper Scissors">
 
         <h3>Rock Paper Scissors</h3>
       </div>
