replaced lorem images with saved images

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section class="main-section">
       <h1>About Me</h1>
 
-      <img src="http://lorempixel.com/400/200/" class="auth-image" alt="Your Name">
+      <img src="assets/images/placeholder.jfif" class="auth-image" alt="Your Name">
 
       <p>My name is Skip Kamvongsa, I live in Westminster Colorado and I have a Pembroke Welsh Corgi names Daisy. I work as a operations technician and make medical device grafts with donated human tissue.</p>
       <p>My hobbies are i love to camp, fish, go to the range, hike, and just live me life. life is too short to not do anything and just work. A great motto that ive learned and i know its been around for a while but its "work life balance" or "work hard play hard."</p>
