Added link to trivia game

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
       <div class="work">
         <img src="assets/images/technics-2.jfif" alt="Trivia Game">
 
-        <h3>Trivia Game</h3>
+        <a href="https://skip1113.github.io/TriviaGame/"><h3>Trivia Game</h3></a>
       </div>
       <div class="work">
         <img src="assets/images/technics-3.jfif" alt="Rutgers Info Widget">
