added giphy app and images

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,19 +31,19 @@
         <a href="https://skip1113.github.io/Word-Guess-Game/index.html"><h3>Word Guess</h3></a>
       </div>
       <div class="work">
-        <img src="assets/images/technics-1.jfif" alt="RPG Game">
+        <img src="assets/images/crystals.png" alt="RPG Game" height="205px">
 
-        <a href="https://skip1113.github.io/unit-4-game/"><h3>RPG Game</h3></a>
+        <a href="https://skip1113.github.io/unit-4-game/"><h3>Crystal Game</h3></a>
       </div>
       <div class="work">
-        <img src="assets/images/technics-2.jfif" alt="Trivia Game">
+        <img src="assets/images/simpsonsTriv.png" alt="Trivia Game" height="205px">
 
         <a href="https://skip1113.github.io/TriviaGame/"><h3>Trivia Game</h3></a>
       </div>
-      <div class="work">
-        <img src="assets/images/technics-3.jfif" alt="Rutgers Info Widget">
+      <div id="gif-img" class="work">
+        <img src="assets/images/GiphyApp.png" alt="Rutgers Info Widget" height="205px">
 
-        <h3>Rutgers Info Widget</h3>
+        <a href="https://skip1113.github.io/GIFtastic/index.html"><h3>Giphy API</h3></a>
       </div>
       <div class="work">
         <img src="assets/images/technics-4.jfif" alt="Rock Paper Scissors">
