Added Train Schedule link to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -46,9 +46,9 @@
         <a href="https://skip1113.github.io/GIFtastic/index.html"><h3>Giphy API</h3></a>
       </div>
       <div class="work">
-        <img src="assets/images/technics-4.jfif" alt="Rock Paper Scissors">
+        <img src="assets/images/technics-4.jfif" alt="Train Schedule">
 
-        <h3>Rock Paper Scissors</h3>
+        <a href="https://skip1113.github.io/FireTrain/index.html"><h3>Train Schedule</h3></a>
       </div>
 
     </section>
