Added game image, fixed image height

--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
       <h1>Portfolio</h1>
 
       <div class="work">
-        <img src="assets/images/technics-0.jfif"  alt="Word Guess">
+        <img src="assets/images/wordgame.png"  alt="Word Guess" height="200px">
         
 
         <a href="https://skip1113.github.io/Word-Guess-Game/index.html"><h3>Word Guess</h3></a>
@@ -46,7 +46,7 @@
         <a href="https://skip1113.github.io/GIFtastic/index.html"><h3>Giphy API</h3></a>
       </div>
       <div class="work">
-        <img src="assets/images/technics-4.jfif" alt="Train Schedule">
+        <img src="assets/images/trainapp.png" alt="Train Schedule" height="190px">
 
         <a href="https://skip1113.github.io/FireTrain/index.html"><h3>Train Schedule</h3></a>
       </div>
